// Copyright Â© 2021 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package schnorrsignature;

option go_package = "github.com/getamis/alice/crypto/schnorrsignature";

import "github.com/getamis/alice/crypto/zkproof/message.proto";
import "github.com/getamis/alice/crypto/ecpointgrouplaw/point.proto";

message CommitmentMsg {
	bytes x = 1;
	ecpointgrouplaw.EcPointMessage D = 2;
	ecpointgrouplaw.EcPointMessage E = 3;
	zkproof.SchnorrProofMessage sG = 4;
}

message PartialSignatureMsg {
	bytes x = 1;
	bytes si = 2;
}
